[build-system]
requires = [
    "setuptools>=80.9.0",
    'pytz',
    'h5py',
    'numpy',
    'tables',
    'pyarrow',
    'matplotlib',
    'pandas<=2.2.1',
    'promql_http_api==0.3.3'
]
build-backend = "setuptools.build_meta"

[project]
name = "pyprofqueue"
version = "0.4.2"
authors = [
    { name = "Marcus Keil", email = "marcus.keil@cs.ucl.ac.uk" }
]
maintainers = [
    { name = "Marcus Keil", email = "marcus.keil@cs.ucl.ac.uk" }
]
license = {text = "MIT License"}
description = "pyprofqueue serves as a python package that can take in existing bash scripts, add initialisations and calls to use profilers on the bash script, and submit the script to an HPC queue system on the users' behalf."
readme = "ReadMe.md"
classifiers=[
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3.10',
]
requires-python = ">=3.11"
dependencies = ['pytz', 'h5py', 'numpy', 'tables', 'pyarrow', 'matplotlib', 'pandas<=2.2.1', 'promql_http_api==0.3.3']

[project.urls]
Homepage = "https://github.com/uksrc-developers/PyProfQueue"